Implemented ability for view books lended to reader

--- a/static/main.css
+++ b/static/main.css
@@ -53,3 +53,8 @@ th, td {
 .link-btn:active {
   color: var(--link-active-color);
 }
+
+.error:nth-child(n) {
+  background: var(--danger-color);
+  color: var(--danger-text-color);
+}
